<resources>
    <string name="app_name">Flag</string>
    <string name="campos_vacios">Rellena todos los campos.</string>
    <string name="rellena_campos_obligatorios">Este campo es obligatorio.</string>
    <string name="selecciona_equipo">Selecciona el equipo</string>
    <string name="selecciona_pos">Selecciona la posición</string>
    <string name="selecciona_jugador">Selecciona el jugador</string>
    <string name="no_existen_equipos">No existen equipos</string>
    <string name="no_existen_posiciones">No existen posiciones</string>
    <string name="no_existen_jugadores">No existen jugadores</string>
    <string name="rellena_nombre">Rellena este campo con tu nombre actual o uno nuevo.</string>
    <string name="rellena_email">Rellena este campo con tu email actual o uno nuevo.</string>
    <string name="contrasenia_rellena">Introduce tu contraseña actual para efectuar los cambios.</string>
    <string name="email_invalido">Email inválido.</string>
    <string name="contrasenia_incorrecta">Contraseña incorrecta.</string>
    <string name="codigo_incorrecto">El código es incorrecto.</string>
    <string name="nombre_distinto">Ya estás usando este nombre.</string>
    <string name="email_distinto">Ya estás usando este email.</string>
    <string name="sin_temporada">Sin temporada</string>
    <string name="equipo">Equipo</string>
    <string name="seles_img_perfil">Selecciona una imagen de perfil</string>
    <string name="vs">VS</string>
    <string name="bar">-</string>

    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="otro">Otro</string>

    <string name="planificado">PLANIFICADO</string>
    <string name="cancelado">CANCELADO</string>
    <string name="finalizado">FINALIZADO</string>
    <string name="en_proceso">EN PROCESO</string>

    <string name="open_nav">Abrir Nav</string>
    <string name="close_nav">Cerrar Nav</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="registrar_administrador">REGISTRAR ADMINISTRADOR</string>
    <string name="registrar_jugador">REGISTRAR JUGADOR</string>
    <string name="entrenamientos">ENTRENAMIENTOS</string>
    <string name="posiciones">Posiciones</string>
    <string name="partidos">PARTIDOS</string>
    <string name="lugar">LUGAR</string>
    <string name="hora_inicio">HORA INICIO</string>
    <string name="hora_fin">HORA FIN</string>
    <string name="buscar_jugador">Buscar jugador...</string>
    <string name="a_ade_una_descripci_n">Añade una descripción...</string>
    <string name="asistentes">Asistentes:</string>
    <string name="observaciones">OBSERVACIONES</string>
    <string name="aceptar_cambios">ACEPTAR CAMBIOS</string>
    <string name="cerrar_sesi_n">CERRAR SESIÓN</string>
    <string name="eliminar_ncuenta">ELIMINAR\nCUENTA</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrase_a_antigua">Contraseña antigua</string>
    <string name="contrase_a_nueva">Contraseña nueva</string>
    <string name="peso_kg">Peso (kg)</string>
    <string name="altura_cm">Altura (cm)</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="n_de_dorsal">Dorsal</string>
    <string name="c_digo">Código</string>
    <string name="datos_personales">DATOS PERSONALES</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="desea_eliminar_este_partido">¿DESEA ELIMINAR ESTE PARTIDO?</string>
    <string name="desea_cancelar_este_partido">¿DESEA CANCELAR ESTE PARTIDO?</string>
    <string name="cancelar">CANCELAR</string>
    <string name="temporada">TEMPORADA</string>
    <string name="liga">LIGA</string>
    <string name="eliminar_partido">ELIMINAR</string>
    <string name="sin_entrenamiento">SIN ENTRENAMIENTO</string>
    <string name="ver_perfil">VER PERFIL</string>
    <string name="a_adir">AÑADIR</string>
    <string name="introduce_el_nombre_de_la_posici_n">INTRODUCE EL NOMBRE DE LA POSICIÓN</string>
    <string name="introduce_una_descripci_n">Introduce una descripción...</string>
    <string name="no_se_han_encontrado_jugadores">NO SE ENCONTRARON JUGADORES</string>
    <string name="jugadores">Jugadores</string>
    <string name="editar_perfil">EDITAR PERFIL</string>
    <string name="calificaciones">Calificaciones</string>
    <string name="no_existen_partidos">NO EXISTEN PARTIDOS</string>
    <string name="fecha_de_entrenamiento">Fecha de entrenamiento</string>
    <string name="fecha_de_finalizaci_n">Fecha de finalización</string>
    <string name="c_digo_administrador">CÓDIGO ADMINISTRADOR</string>
    <string name="c_digo_jugador">CÓDIGO JUGADOR</string>
</resources>
