<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterAdmin">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/regAdminImg"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:foregroundGravity="center"
            android:src="@drawable/profile"
            app:civ_border_color="@color/granet"
            app:civ_border_width="2dp" />

        <EditText
            android:id="@+id/adminUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/small_red_stroke"
            android:drawableStart="@drawable/person"
            android:drawablePadding="12dp"
            android:hint="@string/nombre_de_usuario"
            android:inputType="text"
            android:maxLength="13"
            android:padding="12dp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/adminEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/small_red_stroke"
            android:drawableStart="@drawable/email"
            android:drawablePadding="12dp"
            android:hint="@string/correo_electr_nico"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:padding="12dp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/adminPass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/small_red_stroke"
            android:drawableStart="@drawable/key"
            android:drawablePadding="12dp"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:longClickable="false"
            android:maxLength="16"
            android:padding="12dp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/adminCode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/small_red_stroke"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="12dp"
            android:hint="@string/c_digo"
            android:inputType="textPassword"
            android:longClickable="false"
            android:maxLength="10"
            android:paddingTop="10dp"
            android:paddingStart="5dp"
            android:paddingBottom="10dp"
            android:textSize="15sp" />

        <Button
            android:id="@+id/adminAccept"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/accept_button"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/aceptar"
            android:textColor="@color/granet"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/regAdminBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />
</androidx.constraintlayout.widget.ConstraintLayout>