<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/granet">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/btnRegPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/btn_register_login"
                android:elevation="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registrar_jugador"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnRegAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRegPlayer">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/btn_register_login"
                android:elevation="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registrar_administrador"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/relLayLogin"
        android:layout_width="match_parent"
        android:layout_height="560dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            card_view:cardElevation="0dp"
            android:background="@drawable/view_shape1"
            android:backgroundTint="@color/light_grey"
            card_view:cardUseCompatPadding="false">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/loginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/small_red_stroke"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="12dp"
                    android:hint="@string/correo_electr_nico"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:padding="12dp"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/loginPass"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/small_red_stroke"
                    android:drawableStart="@drawable/key"
                    android:drawablePadding="12dp"
                    android:hint="@string/contrase_a"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:padding="12dp"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/accept_button"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:text="@string/iniciar_sesi_n"
                    android:textColor="@color/granet"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ball_icon" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>